namespace BusinessObject.DTO;

public class ForgotPasswordRequestDTO
{
    public string Email { get; set; } = null!;
}
